# prototype_websockets

./: .editorconfig  .gitignore  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  apps.py  auth.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/chat/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py
backend/chat/: apps.py  consumers.py  routing.py
backend/core/: asgi.py  settings.py  urls.py
frontend/: Dockerfile  Dockerfile.prod  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  App.tsx
frontend/src/components/: Chat.jsx  ChatRoom.tsx  ChatWindow.jsx  Login.jsx  Register.jsx  UserList.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/services/: api.js  websocket.js
